--- a/src/app/pages/apps/purchase/purchase-invoices/purchase-invoices.component.html
+++ b/src/app/pages/apps/purchase/purchase-invoices/purchase-invoices.component.html
@@ -1,101 +1,157 @@
 <!-- WHOLE TABLE -->
 <mat-card class="cardWithShadow">
- 
-    <!-- TABLE HEADER -->
-      <header>
-          <!-- SEARCH -->
-        <div class="col-sm-4 p-20 searchbar ">
-          <mat-form-field appearance="outline" class="hide-hint custom-search ">
-            <input matInput placeholder="Search by supplier or date" />
-            <mat-icon matSuffix>
-              <i-tabler name="search" class="icon-15"></i-tabler>
+
+  <!-- TABLE HEADER -->
+  <header>
+    <!-- SEARCH -->
+    <div class="searchbar p-20">
+      <mat-form-field appearance="outline" class="w-100">
+        <input matInput placeholder="Search Supplier..." aria-label="Supplier"
+          (keyup)="APPLY_SEARCH_FILTER($any($event.target).value)">
+        <mat-icon matPrefix class="op-5">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon-20 d-flex" height="24px" viewBox="0 -960 960 960"
+            width="24px" fill="#5f6368">
+            <path
+              d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+          </svg>
+        </mat-icon>
+      </mat-form-field>
+    </div>
+
+    <div class="filter-date p-20">
+      <section>
+        @if(showDatePicker) {
+        <mat-form-field appearance="outline" class="date_picker">
+
+          <mat-date-range-input [rangePicker]="custompicker">
+            <input matStartDate placeholder="Start date" [(ngModel)]="START_DATE"
+              (ngModelChange)="handleStartDateChange($event)" />
+            <input matEndDate placeholder="End date" [(ngModel)]="END_DATE"
+              (ngModelChange)="handleEndDateChange($event)" />
+          </mat-date-range-input>
+
+          <mat-datepicker-toggle matIconSuffix [for]="custompicker"></mat-datepicker-toggle>
+          <mat-date-range-picker #custompicker></mat-date-range-picker>
+
+        </mat-form-field>
+        }
+
+        <!-- DATE -->
+        <div class="dropdown">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-select p placeholder="Today" [(ngModel)]="selectedMonth"
+              (selectionChange)="DROPDOWN_FILTERATION($event.value, 'month')">
+              @for(month of months; track month) {
+              <mat-option value={{month.value}}>{{month.viewValue}}</mat-option>
+              }
+
+            </mat-select>
+            <mat-icon matPrefix class="op-5">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                fill="#5f6368">
+                <path
+                  d="M200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Zm280 240q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm-160 0q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm320 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM480-240q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm-160 0q-17 0-28.5-11.5T280-280q0-17 11.5-28.5T320-320q17 0 28.5 11.5T360-280q0 17-11.5 28.5T320-240Zm320 0q-17 0-28.5-11.5T600-280q0-17 11.5-28.5T640-320q17 0 28.5 11.5T680-280q0 17-11.5 28.5T640-240Z" />
+              </svg>
             </mat-icon>
           </mat-form-field>
         </div>
-    
-           <!-- DROPDOWN -->
-        <div class="filter-date">
-          <mat-card-header class="d-flex">
-            <mat-form-field class="theme-select" appearance="outline">
-              <mat-select [(ngModel)]="selectedMonth" (selectionChange)="ON_CHANGE_DROPDOWN($event.value)" placeholder="Today">
-                <mat-option *ngFor="let month of months" [value]="month.value">{{ month.viewValue }}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            
-          </mat-card-header>
-        </div>
-      </header>
-  
-      <mat-card-content>
-  
-  <!-- TABLE BODY -->
-  <div class="table-responsive">
-  <table mat-table [dataSource]="purchaseInvoicesArray" multiTemplateDataRows>
-  
-  <!-- Iterate over displayedColumns using ngFor -->
-  <ng-container *ngFor="let column of displayedColumns;">
-      <ng-container matColumnDef="{{ column }}">
-                
-      <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">{{ column | titlecase }}</th>
-      <td mat-cell *matCellDef="let element" class="p-x-24 f-s-14 p-l-0" (click)="expandRow($event, element, column)">
-  
-          <!-- Check if the column is 'status' -->
-          <ng-container *ngIf="column !== 'action'; else actionColumn">
-            {{ element[column] }}
+      </section>
+
+      <!-- Download As -->
+      <div class="dropdown">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-select placeholder={{selectedDownloadOption}} [ngModel]="selectedDownloadOption"
+            (selectionChange)="DROPDOWN_FILTERATION($event.value, 'Download')">
+            @for(option of Options; track option) {
+            <mat-option value={{option.value}}>{{option.viewValue}}</mat-option>
+            }
+          </mat-select>
+          <mat-icon matPrefix class="op-5">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+              <path
+                d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+            </svg>
+          </mat-icon>
+        </mat-form-field>
+      </div>
+    </div>
+
+  </header>
+
+  <mat-card-content>
+
+    <!-- TABLE BODY -->
+    <div class="table-responsive">
+      <table mat-table [dataSource]="purchaseInvoicesArray" multiTemplateDataRows>
+
+        <!-- Iterate over displayedColumns using ngFor -->
+        <ng-container *ngFor="let column of displayedColumns;">
+          <ng-container matColumnDef="{{ column }}">
+
+            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">{{ column |
+              titlecase }}</th>
+            <td mat-cell *matCellDef="let element" class="p-x-24 f-s-14 p-l-0"
+              (click)="expandRow($event, element, column)">
+
+              <!-- Check if the column is 'status' -->
+              <ng-container *ngIf="column !== 'action'; else actionColumn">
+                {{ element[column] }}
+              </ng-container>
+
+              <!-- Apply specific design if the column is 'status' -->
+
+
+              <ng-template #actionColumn>
+                <div class="action-link">
+                  <a (click)="EDIT_PRODUCT(element)" class="m-r-10 cursor-pointer"><i-tabler name="edit"
+                      class="icon-18"></i-tabler></a>
+                  <a class="m-r-10 cursor-pointer" (click)="OPEN_DIALOG('Delete',element)"><i-tabler name="trash"
+                      class="icon-18"></i-tabler></a>
+                </div>
+              </ng-template>
+
+            </td>
           </ng-container>
-    
-          <!-- Apply specific design if the column is 'status' -->
-    
-          
-          <ng-template #actionColumn>
-              <div class="action-link">
-              <a (click)="EDIT_PRODUCT(element)" class="m-r-10 cursor-pointer"><i-tabler name="edit" class="icon-18"></i-tabler></a>
-              <a class="m-r-10 cursor-pointer" (click)="OPEN_DIALOG('Delete',element)"><i-tabler name="trash" class="icon-18"></i-tabler></a>
-              </div>
-          </ng-template>
-  
-          </td>
-      </ng-container>
-  </ng-container>
-    
-            <!-- EXPANDED ROW DETAILS -->
-            <ng-container matColumnDef="expandedDetail">
-              <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                <div [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
-                  <div class="p-15 rounded b-1 m-b-16 m-x-18">
-                    <div class="d-flex align-items-center gap-12">
-                      <span
-                        class="bg-light-primary text-primary icon-48 rounded f-w-600 d-flex align-items-center justify-content-center">
-                        {{ element.barcode }}
-                      </span>
-                      <div>
-                        <div class="f-s-14 f-w-600 mat-subtitle-1">
-                          {{ element.name }}
-                        </div>
-                        <div class="f-s-14">{{ element.status }}</div>
-                      </div>
+        </ng-container>
+
+        <!-- EXPANDED ROW DETAILS -->
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+            <div [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
+              <div class="p-15 rounded b-1 m-b-16 m-x-18">
+                <div class="d-flex align-items-center gap-12">
+                  <span
+                    class="bg-light-primary text-primary icon-48 rounded f-w-600 d-flex align-items-center justify-content-center">
+                    {{ element.barcode }}
+                  </span>
+                  <div>
+                    <div class="f-s-14 f-w-600 mat-subtitle-1">
+                      {{ element.name }}
                     </div>
-                    <div class="f-s-14 m-t-8">
-                      {{ element.note }}
-                    </div>
+                    <div class="f-s-14">{{ element.status }}</div>
                   </div>
                 </div>
-              </td>
-            </ng-container>
-    
-            <!-- HEADER AND ROW DEFINITIONS -->
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand" class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="expandedElement = expandedElement === element ? null : element;">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-  
-  </table>
-  </div>
-    
-        <!-- TABLE PAGINATION -->
-        <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons>
-        </mat-paginator>
-      </mat-card-content>
-    </mat-card>
+                <div class="f-s-14 m-t-8">
+                  {{ element.note }}
+                </div>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- HEADER AND ROW DEFINITIONS -->
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand" class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = expandedElement === element ? null : element;">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+      </table>
+    </div>
+
+    <!-- TABLE PAGINATION -->
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons>
+    </mat-paginator>
+  </mat-card-content>
+</mat-card>
